@@ -1,6 +1,17 @@
 lib/MojoX/XML.pm
-t/XML.t
-t/XML-Extensions.t
+lib/MojoX/XML/XRD.pm
+lib/MojoX/XML/HostMeta.pm
+t/add.t
+t/add-node.t
+t/comment.t
+t/constructor.t
+t/extensions.t
+t/pretty.t
+t/pretty-special.t
+t/set.t
+t/summary.t
+t/Extensions/XRD.t
+t/Extensions/HostMeta.t
 Changes
 MANIFEST
 LICENSE
