@@ -965,16 +965,18 @@ If a node already has a comment, comments will be merged.
 
   my $xml = MojoX::XML->new('Document');
   $xml->set('Element' => { id => 5 });
+
+  # Overwrite
   $xml->set('Element' => { id => 6 });
 
-Adds a new element to the document - only once.
+Adds a new element as a child to the node - only once.
 Accepts all parameters as defined in L<add|/add>,
 without accepting L<MojoX::XML> objects.
 
 If one or more elements with the same tag name are
 already children of the requesting node,
-the old elements will be overwritten.
-Comments will be merged.
+the old elements will be overwritten and
+comments will be merged.
 
 
 =head2 to_pretty_xml
