@@ -8,19 +8,20 @@ use Carp qw/carp/;
 
 # No constructor
 sub new {
-  carp 'Only use as an extension to XRD' and return;
-};
-
-# Add host information
-sub add_host {
-  shift->add(Host => shift)
-};
-
-# Get host information
-sub get_host {
-  my $h = shift->at('Host');
-  return $h->all_text if $h;
+  carp 'Only use ' . __PACKAGE__ . ' as an extension to XRD';
   return;
+};
+
+# host information
+sub host {
+  my $self = shift;
+
+  unless ($_[0]) {
+    my $h = $self->at('Host') or return;
+    return $h->all_text;
+  };
+
+  return $self->set(Host => shift);
 };
 
 
@@ -35,6 +36,7 @@ __END__
 
 MojoX::XML::Hostmeta - Extend MojoX::XML::XRD for use with HostMeta
 
+
 =head1 SYNOPSIS
 
   use MojoX::XML::XRD;
@@ -42,8 +44,8 @@ MojoX::XML::Hostmeta - Extend MojoX::XML::XRD for use with HostMeta
   my $xrd = MojoX::XML::XRD->new;
   $xrd->extension('MojoX::XML::HostMeta');
 
-  $xrd->add(Subject => 'http://sojolicio.us/');
-  $xrd->add_host('sojolicio.us');
+  $xrd->subject('http://sojolicio.us/');
+  $xrd->host('sojolicio.us');
 
   print $xrd->to_pretty_xml;
 
@@ -55,10 +57,11 @@ MojoX::XML::Hostmeta - Extend MojoX::XML::XRD for use with HostMeta
   #   <hm:Host>sojolicio.us</hm:Host>
   # </XRD>
 
+
 =head1 DESCRIPTION
 
 L<MojoX::XML::HostMeta> is an extension
-for L<MojoX::XML::XRD> and provides addititional
+to L<MojoX::XML::XRD> and provides addititional
 functions for the work with
 L<HostMeta|http://tools.ietf.org/html/draft-hammer-hostmeta>
 documents.
@@ -66,31 +69,27 @@ documents.
 
 =head1 METHODS
 
-=head2 add_host
+=head2 host
 
-  $xrd->add_host('sojolicio.us');
+  $xrd->host('sojolicio.us');
+  print $xrd->host;
 
-Add host information to xrd.
-
-
-=head2 get_host
-
-  print $xrd->get_host;
-
-Return host information from xrd.
+Host information of the xrd.
 
 
 =head1 DEPENDENCIES
 
 L<Mojolicious>.
 
+
 =head1 AVAILABILITY
 
   https://github.com/Akron/MojoX-XML
 
+
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2011-2012, L<Nils Diewald|http://nils-diewald.de>.
+Copyright (C) 2011-2013, L<Nils Diewald|http://nils-diewald.de/>.
 
 This program is free software, you can redistribute it
 and/or modify it under the same terms as Perl.
